--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-08",
+  "name": "goit-react-hw-03",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,29 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@redux-devtools/extension": "^3.3.0",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.2",
-    "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "izitoast": "^1.4.0",
+    "lazy": "^1.0.11",
     "modern-normalize": "^2.0.0",
-    "nanoid": "^5.0.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.1",
+    "react-router": "^6.25.1",
+    "react-router-dom": "^6.25.1",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "vite": "^5.3.1"
   }
 }
